# agendo

./: .gitignore  ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  WEBHOOK_SYSTEM_DOCUMENTATION.md  package-lock.json  package.json  setup.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt  run_dev.py
backend/app/: main.py
backend/app/agents/: conversation_agent.py
backend/app/api/: agent.py  agent_configs.py  evolution.py  instances.py  webhook_management.py  webhooks.py
backend/app/core/: config.py
backend/app/database/: connection.py
backend/app/models/: database.py
backend/app/services/: calendar_service.py  env_watcher.py  evolution_service.py  instance_service.py  webhook_manager.py
frontend/: .env.example  package.json  test-agent-config.html
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/agent-config/: page.tsx
frontend/src/app/api/auth/google/: route.ts
frontend/src/app/api/evo/instances/: route.ts
frontend/src/app/api/instances/create/: route.ts
frontend/src/app/api/webhooks/evolution/: route.ts
frontend/src/app/connect/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/setup/: page.tsx
src/app/: page.tsx
src/app/api/auth/google/: route.ts
src/app/api/calendar/availability/: route.ts
src/app/api/calendar/book/: route.ts
src/app/api/evo/instances/: route.ts
src/app/api/webhooks/evolution/: route.ts
src/app/api/whatsapp/send/: route.ts
src/app/api/whatsapp/webhook/: route.ts
src/app/connect/: page.tsx
src/app/dashboard/: page.tsx
src/app/setup/: page.tsx
(+8 files in other folders)
